--- a/Day072/data_exploration.ipynb
+++ b/Day072/data_exploration.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Exploration with Pandas\n",
+    "## Reading .csv file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +115,7 @@
        "4  Business  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,6 +124,13 @@
     "import pandas as pd\n",
     "df = pd.read_csv('./salaries_by_college_major.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preliminary data exploration"
    ]
   },
   {
@@ -161,6 +176,13 @@
    "source": [
     "# Check columns names\n",
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning with Pandas"
    ]
   },
   {
@@ -944,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1064,7 @@
        "49                            31000.0                            96400.0  HASS  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,6 +1073,282 @@
     "# Creating a new df with clean data\n",
     "clean_df = df.dropna()\n",
     "clean_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Accessing Columns and individual Cells in a Dataframe\n",
+    "## Find Collage Major with Highest Starting Salaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     46000.0\n",
+       "1     57700.0\n",
+       "2     42600.0\n",
+       "3     36800.0\n",
+       "4     41600.0\n",
+       "5     35800.0\n",
+       "6     38800.0\n",
+       "7     43000.0\n",
+       "8     63200.0\n",
+       "9     42600.0\n",
+       "10    53900.0\n",
+       "11    38100.0\n",
+       "12    61400.0\n",
+       "13    55900.0\n",
+       "14    53700.0\n",
+       "15    35000.0\n",
+       "16    35900.0\n",
+       "17    50100.0\n",
+       "18    34900.0\n",
+       "19    60900.0\n",
+       "20    38000.0\n",
+       "21    37900.0\n",
+       "22    47900.0\n",
+       "23    39100.0\n",
+       "24    41200.0\n",
+       "25    43500.0\n",
+       "26    35700.0\n",
+       "27    38800.0\n",
+       "28    39200.0\n",
+       "29    37800.0\n",
+       "30    57700.0\n",
+       "31    49100.0\n",
+       "32    36100.0\n",
+       "33    40900.0\n",
+       "34    35600.0\n",
+       "35    49200.0\n",
+       "36    40800.0\n",
+       "37    45400.0\n",
+       "38    57900.0\n",
+       "39    35900.0\n",
+       "40    54200.0\n",
+       "41    39900.0\n",
+       "42    39900.0\n",
+       "43    74300.0\n",
+       "44    50300.0\n",
+       "45    40800.0\n",
+       "46    35900.0\n",
+       "47    34100.0\n",
+       "48    36500.0\n",
+       "49    34000.0\n",
+       "Name: Starting Median Salary, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df['Starting Median Salary']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74300.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df['Starting Median Salary'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking max salary with index\n",
+    "clean_df['Starting Median Salary'].idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Physician Assistant'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking the name of the max salary\n",
+    "clean_df['Undergraduate Major'].loc[43]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Physician Assistant'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking the name of the major with max salary using double bracket\n",
+    "clean_df['Undergraduate Major'][43]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Undergraduate Major                  Physician Assistant\n",
+       "Starting Median Salary                           74300.0\n",
+       "Mid-Career Median Salary                         91700.0\n",
+       "Mid-Career 10th Percentile Salary                66400.0\n",
+       "Mid-Career 90th Percentile Salary               124000.0\n",
+       "Group                                               STEM\n",
+       "Name: 43, dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Retrieving entire row without specifying a particular column\n",
+    "clean_df.loc[43]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df['Mid-Career Median Salary'].idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The highest Mid-Career Salary is: Chemical Engineering\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The highest Mid-Career Salary is: {clean_df['Undergraduate Major'][8]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The highest Mid-Career Salary is: Chemical Engineering\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Combining both statements in one line\n",
+    "\n",
+    "midcarreer_highest_salary = clean_df['Undergraduate Major'].iloc[clean_df['Mid-Career Median Salary'].idxmax()]\n",
+    "print(f\"The highest Mid-Career Salary is: {midcarreer_highest_salary}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lowest starting major is: Spanish\n",
+      "The lowest mid-career major is: Spanish\n",
+      "Undergraduate Major                  Spanish\n",
+      "Starting Median Salary               34000.0\n",
+      "Mid-Career Median Salary             53100.0\n",
+      "Mid-Career 10th Percentile Salary    31000.0\n",
+      "Mid-Career 90th Percentile Salary    96400.0\n",
+      "Group                                   HASS\n",
+      "Name: 49, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "starting_lowest_salary = clean_df['Undergraduate Major'].iloc[clean_df['Starting Median Salary'].idxmin()]\n",
+    "print(f\"The lowest starting major is: {starting_lowest_salary}\")\n",
+    "\n",
+    "midcareer_lowest_salary = clean_df['Undergraduate Major'].iloc[clean_df['Mid-Career Median Salary'].idxmin()]\n",
+    "print(f\"The lowest mid-career major is: {starting_lowest_salary}\")\n",
+    "\n",
+    "print(clean_df.loc[clean_df['Starting Median Salary'].idxmin()])"
    ]
   }
  ],
