--- a/Day073/Programming_Languages_(start).ipynb
+++ b/Day073/Programming_Languages_(start).ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 29,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 30,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -78,7 +78,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv(\"./QueryResults.csv\", names=[\"DATE\", \"TAG\", \"POSTS\"])"
+        "df = pd.read_csv(\"./QueryResults.csv\", names=[\"DATE\", \"TAG\", \"POSTS\"], header=0)"
       ]
     },
     {
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 31,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -129,33 +129,33 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>m</td>\n",
-              "      <td>TagName</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>2008-07-01 00:00:00</td>\n",
+              "      <td>c#</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>2008-07-01 00:00:00</td>\n",
-              "      <td>c#</td>\n",
-              "      <td>3.0</td>\n",
+              "      <td>2008-08-01 00:00:00</td>\n",
+              "      <td>javascript</td>\n",
+              "      <td>163</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2008-08-01 00:00:00</td>\n",
-              "      <td>javascript</td>\n",
-              "      <td>163.0</td>\n",
+              "      <td>perl</td>\n",
+              "      <td>28</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>2008-08-01 00:00:00</td>\n",
-              "      <td>perl</td>\n",
-              "      <td>28.0</td>\n",
+              "      <td>c#</td>\n",
+              "      <td>504</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>2008-08-01 00:00:00</td>\n",
-              "      <td>c#</td>\n",
-              "      <td>504.0</td>\n",
+              "      <td>delphi</td>\n",
+              "      <td>13</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -163,14 +163,14 @@
             ],
             "text/plain": [
               "                  DATE         TAG  POSTS\n",
-              "0                    m     TagName    NaN\n",
-              "1  2008-07-01 00:00:00          c#    3.0\n",
-              "2  2008-08-01 00:00:00  javascript  163.0\n",
-              "3  2008-08-01 00:00:00        perl   28.0\n",
-              "4  2008-08-01 00:00:00          c#  504.0"
+              "0  2008-07-01 00:00:00          c#      3\n",
+              "1  2008-08-01 00:00:00  javascript    163\n",
+              "2  2008-08-01 00:00:00        perl     28\n",
+              "3  2008-08-01 00:00:00          c#    504\n",
+              "4  2008-08-01 00:00:00      delphi     13"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -212,49 +212,49 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>2603</th>\n",
+              "      <th>2602</th>\n",
               "      <td>2024-03-01 00:00:00</td>\n",
               "      <td>perl</td>\n",
-              "      <td>52.0</td>\n",
+              "      <td>52</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2603</th>\n",
+              "      <td>2024-03-01 00:00:00</td>\n",
+              "      <td>python</td>\n",
+              "      <td>8419</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2604</th>\n",
               "      <td>2024-03-01 00:00:00</td>\n",
-              "      <td>python</td>\n",
-              "      <td>8419.0</td>\n",
+              "      <td>c</td>\n",
+              "      <td>797</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2605</th>\n",
               "      <td>2024-03-01 00:00:00</td>\n",
-              "      <td>c</td>\n",
-              "      <td>797.0</td>\n",
+              "      <td>javascript</td>\n",
+              "      <td>5336</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2606</th>\n",
               "      <td>2024-03-01 00:00:00</td>\n",
-              "      <td>javascript</td>\n",
-              "      <td>5336.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2607</th>\n",
-              "      <td>2024-03-01 00:00:00</td>\n",
               "      <td>swift</td>\n",
-              "      <td>814.0</td>\n",
+              "      <td>814</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                     DATE         TAG   POSTS\n",
-              "2603  2024-03-01 00:00:00        perl    52.0\n",
-              "2604  2024-03-01 00:00:00      python  8419.0\n",
-              "2605  2024-03-01 00:00:00           c   797.0\n",
-              "2606  2024-03-01 00:00:00  javascript  5336.0\n",
-              "2607  2024-03-01 00:00:00       swift   814.0"
+              "                     DATE         TAG  POSTS\n",
+              "2602  2024-03-01 00:00:00        perl     52\n",
+              "2603  2024-03-01 00:00:00      python   8419\n",
+              "2604  2024-03-01 00:00:00           c    797\n",
+              "2605  2024-03-01 00:00:00  javascript   5336\n",
+              "2606  2024-03-01 00:00:00       swift    814"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -276,14 +276,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "ZUidjCPFIho8"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(2607, 3)"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.shape"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -297,14 +310,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "Sc1dmmOoIg2g"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "DATE     2607\n",
+              "TAG      2607\n",
+              "POSTS    2607\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 34,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.count()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -319,14 +348,145 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "9-NYFONcIc1X"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>DATE</th>\n",
+              "      <th>POSTS</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>TAG</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>assembly</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>44183</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>c</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>403716</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>c#</th>\n",
+              "      <td>2008-07-01 00:00:002008-08-01 00:00:002008-09-...</td>\n",
+              "      <td>1614222</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>c++</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>806193</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>delphi</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>51826</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>go</th>\n",
+              "      <td>2009-11-01 00:00:002009-12-01 00:00:002010-01-...</td>\n",
+              "      <td>72738</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>java</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>1916133</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>javascript</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>2527095</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>perl</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>68090</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>php</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>1463888</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>python</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>2189582</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>r</th>\n",
+              "      <td>2008-09-01 00:00:002008-11-01 00:00:002008-12-...</td>\n",
+              "      <td>505145</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ruby</th>\n",
+              "      <td>2008-08-01 00:00:002008-09-01 00:00:002008-10-...</td>\n",
+              "      <td>229005</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>swift</th>\n",
+              "      <td>2009-01-01 00:00:002009-02-01 00:00:002009-03-...</td>\n",
+              "      <td>333197</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                         DATE    POSTS\n",
+              "TAG                                                                   \n",
+              "assembly    2008-08-01 00:00:002008-09-01 00:00:002008-10-...    44183\n",
+              "c           2008-08-01 00:00:002008-09-01 00:00:002008-10-...   403716\n",
+              "c#          2008-07-01 00:00:002008-08-01 00:00:002008-09-...  1614222\n",
+              "c++         2008-08-01 00:00:002008-09-01 00:00:002008-10-...   806193\n",
+              "delphi      2008-08-01 00:00:002008-09-01 00:00:002008-10-...    51826\n",
+              "go          2009-11-01 00:00:002009-12-01 00:00:002010-01-...    72738\n",
+              "java        2008-08-01 00:00:002008-09-01 00:00:002008-10-...  1916133\n",
+              "javascript  2008-08-01 00:00:002008-09-01 00:00:002008-10-...  2527095\n",
+              "perl        2008-08-01 00:00:002008-09-01 00:00:002008-10-...    68090\n",
+              "php         2008-08-01 00:00:002008-09-01 00:00:002008-10-...  1463888\n",
+              "python      2008-08-01 00:00:002008-09-01 00:00:002008-10-...  2189582\n",
+              "r           2008-09-01 00:00:002008-11-01 00:00:002008-12-...   505145\n",
+              "ruby        2008-08-01 00:00:002008-09-01 00:00:002008-10-...   229005\n",
+              "swift       2009-01-01 00:00:002009-02-01 00:00:002009-03-...   333197"
+            ]
+          },
+          "execution_count": 37,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.groupby('TAG').sum()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -342,14 +502,145 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "hDT4JlJNJfgQ"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>DATE</th>\n",
+              "      <th>POSTS</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>TAG</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>assembly</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>c</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>c#</th>\n",
+              "      <td>189</td>\n",
+              "      <td>189</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>c++</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>delphi</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>go</th>\n",
+              "      <td>173</td>\n",
+              "      <td>173</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>java</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>javascript</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>perl</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>php</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>python</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>r</th>\n",
+              "      <td>186</td>\n",
+              "      <td>186</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ruby</th>\n",
+              "      <td>188</td>\n",
+              "      <td>188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>swift</th>\n",
+              "      <td>179</td>\n",
+              "      <td>179</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            DATE  POSTS\n",
+              "TAG                    \n",
+              "assembly     188    188\n",
+              "c            188    188\n",
+              "c#           189    189\n",
+              "c++          188    188\n",
+              "delphi       188    188\n",
+              "go           173    173\n",
+              "java         188    188\n",
+              "javascript   188    188\n",
+              "perl         188    188\n",
+              "php          188    188\n",
+              "python       188    188\n",
+              "r            186    186\n",
+              "ruby         188    188\n",
+              "swift        179    179"
+            ]
+          },
+          "execution_count": 38,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.groupby(\"TAG\").count()"
+      ]
     },
     {
       "cell_type": "markdown",
