--- a/Day073/Programming_Languages_(start).ipynb
+++ b/Day073/Programming_Languages_(start).ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 2,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 3,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 4,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -170,7 +170,7 @@
               "4  2008-08-01 00:00:00      delphi     13"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -254,7 +254,7 @@
               "2606  2024-03-01 00:00:00       swift    814"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 6,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -289,7 +289,7 @@
               "(2607, 3)"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 7,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -326,7 +326,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -348,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 8,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -479,7 +479,7 @@
               "swift       2009-01-01 00:00:002009-02-01 00:00:002009-03-...   333197"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -502,7 +502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 9,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -633,13 +633,13 @@
               "swift        179    179"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df.groupby(\"TAG\").count()"
+        "df.groupby('TAG').count()"
       ]
     },
     {
@@ -656,25 +656,127 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "5nh5a4UtGxu1"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2008-08-01 00:00:00\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "pandas._libs.tslibs.timestamps.Timestamp"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Converting single cell to date object\n",
+        "print(pd.to_datetime(df['DATE'][1]))\n",
+        "type(pd.to_datetime(df['DATE'][1]))"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "016H-Fy4Gxu3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>DATE</th>\n",
+              "      <th>TAG</th>\n",
+              "      <th>POSTS</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2008-07-01</td>\n",
+              "      <td>c#</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2008-08-01</td>\n",
+              "      <td>javascript</td>\n",
+              "      <td>163</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2008-08-01</td>\n",
+              "      <td>perl</td>\n",
+              "      <td>28</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2008-08-01</td>\n",
+              "      <td>c#</td>\n",
+              "      <td>504</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2008-08-01</td>\n",
+              "      <td>delphi</td>\n",
+              "      <td>13</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        DATE         TAG  POSTS\n",
+              "0 2008-07-01          c#      3\n",
+              "1 2008-08-01  javascript    163\n",
+              "2 2008-08-01        perl     28\n",
+              "3 2008-08-01          c#    504\n",
+              "4 2008-08-01      delphi     13"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Convert the entire column to date object\n",
+        "\n",
+        "df['DATE'] = pd.to_datetime(df['DATE'])\n",
+        "df.head()"
+      ]
     },
     {
       "cell_type": "code",
